--- a/dev/web/src/sass/hidari-kikino-eren/_animation.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_animation.scss
@@ -4,6 +4,14 @@
     opacity: 0;
     visibility: hidden;
     transition-delay: 1s;
+
+    .lp-loading_wrap {
+      transform: translate(-50%, 0) !important;
+    }
+
+    .lp-loading_text {
+      opacity: 0;
+    }
   }
 
   .lp-loadingInner {
