--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -955,21 +955,79 @@ input, select {
           left: auto;
           right: 4.51389vw; } }
     .hidarikikinoEren .lp-kv .mod-title1 {
-      padding-bottom: 0; }
+      position: relative;
+      padding-bottom: 0;
+      -webkit-transform-origin: top left;
+      transform-origin: top left;
+      -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0);
+      -webkit-transition-delay: .4s;
+      transition-delay: .4s;
+      -webkit-transition-duration: .2s;
+      transition-duration: .2s; }
+      .hidarikikinoEren .lp-kv .mod-title1:after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
+        -webkit-transform-origin: right bottom;
+        transform-origin: right bottom;
+        -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s, -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        background-color: #000;
+        -webkit-transition-delay: .8s;
+        transition-delay: .8s; }
+    .hidarikikinoEren .lp-kv .mod-title2 {
+      position: relative;
+      -webkit-transform-origin: top left;
+      transform-origin: top left;
+      -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transition-delay: .6s;
+      transition-delay: .6s; }
+      .hidarikikinoEren .lp-kv .mod-title2:after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+        -webkit-transform-origin: right bottom;
+        transform-origin: right bottom;
+        -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s, -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        background-color: #000;
+        -webkit-transition-delay: 1s;
+        transition-delay: 1s; }
     .hidarikikinoEren .lp-kv .mod-title1 img {
       width: 5.73333vw; }
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-kv .mod-title1 img {
           width: 2.53472vw; } }
     .hidarikikinoEren .lp-kv .mod-title2 img {
-      height: 5.6vw; }
+      height: 5.6vw;
+      width: auto; }
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-kv .mod-title2 img {
-          height: 2.91667vw;
-          width: auto; } }
-  .hidarikikinoEren .lp-kv.add-fold .lp-kv_characters > li > div:after {
-    -webkit-transform: scaleY(1);
-    transform: scaleY(1); }
+          height: 2.91667vw; } }
   .hidarikikinoEren .lp-summery {
     position: relative;
     width: 100%;
@@ -1030,41 +1088,58 @@ input, select {
       @media screen and (min-width: 800px) and (max-width: 1100px) {
         .hidarikikinoEren .lp-summery_headingInner {
           left: 25.94595px; } }
-      .hidarikikinoEren .lp-summery_headingInner > h2 {
-        position: absolute;
-        top: -3.33333vw;
-        left: 4vw;
-        width: 9.73333vw;
-        background-color: #000;
-        padding: 3.2vw 2.66667vw;
-        z-index: 2; }
+    .hidarikikinoEren .lp-summery_title {
+      position: absolute;
+      top: -3.33333vw;
+      left: 4vw;
+      width: 9.73333vw;
+      background-color: #000;
+      padding: 3.2vw 2.66667vw;
+      z-index: 2; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-summery_title {
+          padding: 1.25vw 1.04167vw;
+          top: -1.38889vw;
+          left: 1.38889vw;
+          width: 3.92361vw; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .hidarikikinoEren .lp-summery_title {
+          padding: 1.94595vw 1.62162vw;
+          top: -2.16216vw;
+          left: 2.16216vw;
+          width: 6.10811vw;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          justify-content: center; } }
+      .hidarikikinoEren .lp-summery_title img {
+        display: block;
+        width: 3.86667vw; }
         @media screen and (min-width: 800px) {
-          .hidarikikinoEren .lp-summery_headingInner > h2 {
-            padding: 1.25vw 1.04167vw;
-            top: -1.38889vw;
-            left: 1.38889vw;
-            width: 3.92361vw; } }
+          .hidarikikinoEren .lp-summery_title img {
+            width: 1.49306vw; } }
         @media screen and (min-width: 800px) and (max-width: 1100px) {
-          .hidarikikinoEren .lp-summery_headingInner > h2 {
-            padding: 1.94595vw 1.62162vw;
-            top: -2.16216vw;
-            left: 2.16216vw;
-            width: 6.10811vw;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-pack: center;
-            -ms-flex-pack: center;
-            justify-content: center; } }
-        .hidarikikinoEren .lp-summery_headingInner > h2 img {
-          display: block;
-          width: 3.86667vw; }
-          @media screen and (min-width: 800px) {
-            .hidarikikinoEren .lp-summery_headingInner > h2 img {
-              width: 1.49306vw; } }
-          @media screen and (min-width: 800px) and (max-width: 1100px) {
-            .hidarikikinoEren .lp-summery_headingInner > h2 img {
-              width: 2.32432vw; } }
+          .hidarikikinoEren .lp-summery_title img {
+            width: 2.32432vw; } }
+      .hidarikikinoEren .lp-summery_title:after {
+        position: relative;
+        position: absolute;
+        left: 0;
+        top: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
+        -webkit-transform-origin: right bottom;
+        transform-origin: right bottom;
+        -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s, -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        background-color: #000; }
     .hidarikikinoEren .lp-summery_headingDesc {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -1102,11 +1177,21 @@ input, select {
         .hidarikikinoEren .lp-summery_descLine {
           font-size: 1.40541vw; } }
       .hidarikikinoEren .lp-summery_descLine:after {
-        content: '';
         position: absolute;
-        top: 0;
         left: 0;
-        background-color: #deff00; }
+        top: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+        -webkit-transform-origin: right bottom;
+        transform-origin: right bottom;
+        -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s, -webkit-transform 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
+        background-color: #000; }
     .hidarikikinoEren .lp-summery_relationship {
       position: relative;
       width: 100%; }
@@ -1719,29 +1804,51 @@ input, select {
   visibility: visible;
   z-index: 9; }
 
-.hidarikikinoEren .is-onScreenItem .add-onScreen.add-closed .lp-character.mod-item1 > .lp-character_inner {
-  -webkit-transform: translateY(-20%);
-  transform: translateY(-20%); }
-
-.hidarikikinoEren .is-onScreenItem .add-onScreen.add-closed .lp-character.mod-item3 > .lp-character_inner {
-  -webkit-transform: translateY(-20%);
-  transform: translateY(-20%); }
-
-.hidarikikinoEren .is-onScreenItem .add-onScreen.add-closed .lp-character.mod-item2 > .lp-character_inner {
-  -webkit-transform: translateY(20%);
-  transform: translateY(20%); }
-
-.hidarikikinoEren .is-onScreenItem .add-onScreen.add-closed .lp-character.mod-item4 > .lp-character_inner {
-  -webkit-transform: translateY(20%);
-  transform: translateY(20%); }
-
-.hidarikikinoEren .lp-kv_characters.add-onScreen .lp-character_inner:after {
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen .lp-character_inner:after {
   -webkit-transform: scaleY(0);
   transform: scaleY(0); }
 
-.hidarikikinoEren .lp-kv_characters.add-closed .lp-character_inner:after {
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen .lp-kv_title.mod-title1 {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1); }
+  .hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen .lp-kv_title.mod-title1:after {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0); }
+
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen .lp-kv_title.mod-title2 {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1); }
+  .hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen .lp-kv_title.mod-title2:after {
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0); }
+
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen.is-closed .lp-character.mod-item1 > .lp-character_inner {
+  -webkit-transform: translateY(-20%);
+  transform: translateY(-20%); }
+
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen.is-closed .lp-character.mod-item3 > .lp-character_inner {
+  -webkit-transform: translateY(-20%);
+  transform: translateY(-20%); }
+
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen.is-closed .lp-character.mod-item2 > .lp-character_inner {
+  -webkit-transform: translateY(20%);
+  transform: translateY(20%); }
+
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen.is-closed .lp-character.mod-item4 > .lp-character_inner {
+  -webkit-transform: translateY(20%);
+  transform: translateY(20%); }
+
+.hidarikikinoEren .lp-kv.is-onScreenItem.is-onScreen.is-closed .lp-character_inner:after {
   -webkit-transform: scaleY(1) !important;
   transform: scaleY(1) !important; }
+
+.hidarikikinoEren .lp-summery_heading.is-onScreen .lp-summery_title {
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0); }
+
+.hidarikikinoEren .lp-summery_heading.is-onScreen .lp-summery_descLine {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1); }
 
 .hidarikikinoEren .add-step1.lp-kv_characters:nth-child(3) .lp-character_inner, .hidarikikinoEren .add-step1.lp-kv_characters:nth-child(3):after {
   -webkit-transition-delay: .1s;
